# wikibase

./: Cargo.toml  LICENSE  README.md
input/: countries.json
output/: calling_codes.json  capitals.json  currencies.json  emojis.json  flags.json  languages.json  regions.json  sovereign_states.json  un_nations.json
src/: fetch.rs  main.rs  map.rs
src/types/: calling_codes.rs  capital.rs  currency.rs  flag.rs  language.rs  mod.rs  region.rs  sovereign_state.rs  un_nations.rs
